Fix message expansion bug in MD notification.

In MD notification, simple notification was not properly expanded when
expand button was clicked. This was caused by a bug BoxLayout does not
properly handle a view that use its width to calculate the height such
as BoundedLabel (https://crbug.com/682266). We workaround this instead
because there's no obvious solution, and the number of affected classes
by BoxLayout change is large. The detail is written in the comment.

BUG=736998
TEST=out/Debug/message_center_unittests

Change-Id: I2cb5d1e20376e259f1090cbfd03eb55ef55c275b