ui/message_center/views/bounded_label.h
@@ -50,6 +50,9 @@ class MESSAGE_CENTER_EXPORT BoundedLabel : public views::View {
   int GetLinesForWidthAndLimit(int width, int limit);
   gfx::Size GetSizeForWidthAndLines(int width, int lines);
 
+  // See views::Label::SizeToFit for detail.
+  void SizeToFit(int fixed_width);
+
   // views::View:
   int GetBaseline() const override;
   gfx::Size CalculatePreferredSize() const override;
